test/tests/exec/expr/ufcs_error.txt
error: expected additional positional argument `prefix`
 --> exec/expr/ufcs_error.tql:4:12
  |
4 |   x: "abc".starts_with(),
  |            ^^^^^^^^^^^ 
  |
  = usage: starts_with(x:string, prefix:string)
  = docs: https://docs.tenzir.com/reference/functions/starts_with

error: expected additional positional argument `prefix`
 --> exec/expr/ufcs_error.tql:5:6
  |
5 |   y: starts_with("abc"),
  |      ^^^^^^^^^^^ 
  |
  = usage: starts_with(x:string, prefix:string)
  = docs: https://docs.tenzir.com/reference/functions/starts_with
